# ISWC-submission

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Results/Q215380/: qcn2_Q215380_stats.txt
Results/Q6256/: qcn2_Q6256_stats.txt
Results/Q82955/: qcn2_Q82955_stats.txt
Temporal-Constraint-Learning-KGs/: README.md
data/Q215380/: test.gt  train_ML.gt  valid.gt
data/Q215380/Generated_Files/: Rules_R_10_0.9.tsv
data/Q6256/: Rules_R_10_0.95.tsv  Rules_RxV_10_0.95.tsv  test.gt  train_ML.gt  valid.gt
data/Q82955/: test.gt  valid.gt
qualreas-master/qualreas-master/Misc/: allen.py  json_network_format_test.py  qualTime.py  utilities.py
qualreas-master/qualreas-master/Notebooks/: README.ipynb
qualreas-master/qualreas-master/Tests/: test1.py  test_algebra.py  test_network.py  test_qualreas.py  test_relation.py  test_relationSet.py
qualreas-master/qualreas-master/docs/: conf.py  time_point_algebras.rst
qualreas-master/qualreas-master/src/: csv2json.py  qualreas.py
scripts/: qcn_generator2.py  run_experiments.py
src/tclkg/: __init__.py  allen_list.py  allen_relations.py  generator_common.py  qcn_generator2.py  random_experiments.py  rule_discovery.py  run_experiments.py  time_package.py
tests/: test_random_experiments.py
